--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bucket-list",
+    "name": "alanreactportfolio",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
