--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -45,6 +45,7 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
