--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "babel/plugin-proposal-private-property-in-object": "",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^9.5.0"
   }
