--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.14.2",
@@ -30,7 +31,6 @@
     ]
   },
   "devDependencies": {
-    "babel/plugin-proposal-private-property-in-object": "",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^9.5.0"
   }
